modificate to use sonar profile